--- a/.eslintrc
+++ b/.eslintrc
@@ -1,47 +1,13 @@
 {
   "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "plugin:jsx-a11y/recommended",
-    "prettier"
+    "eslint:recommended",
+    "react-app",
+    "react-app/jest",
+    "prettier",
+    "plugin:jsx-a11y/recommended"
   ],
-  "plugins": ["jsx-a11y", "prettier"],
+  "plugins": ["react", "react-hooks", "prettier", "jsx-a11y", "import"],
   "rules": {
-    "import/no-cycle": ["warn", { "maxDepth": 1 }],
-    "import/no-unresolved": "off",
-    "import/prefer-default-export": "off",
-    "react/prop-types": "off",
-    "no-multi-assign": "off",
-    "no-array-index-key": "off",
-    "arrow-body-style": "off",
-    "no-return-await": "warn",
-    "consistent-return": "warn",
-    "no-unused-vars": "warn",
-    "react/jsx-props-no-spreading": "off",
-    "react/destructuring-assignment": "off",
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [".jsx"]
-      }
-    ],
-    "quotes": [
-      2,
-      "single",
-      {
-        "avoidEscape": true
-      }
-    ]
-  },
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "moduleDirectory": ["node_modules", "src/"]
-      }
-    }
+    "no-console": "error"
   }
 }
