--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@girishsawant999/library-name",
+  "name": "@girishsawant999/react-loading-button",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -8,15 +8,14 @@
     "build:dev": "webpack",
     "build": "NODE_ENV=production webpack",
     "test": "jest --coverage",
-    "dev": "webpack serve --open",
-    "prettier": "prettier --check *",
-    "prettier:fix": "prettier --write *",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix"
+    "test:watch": "jest --watch",
+    "dev": "npm run build:dev && cd ./example && npm start",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx,json,md,css,scss,sass,html}' --write"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/girishsawant999/library-name.git"
+    "url": "git+https://github.com/girishsawant999/react-loading-button.git"
   },
   "keywords": [
     "react",
@@ -26,42 +25,44 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/girishsawant999/library-name/issues"
+    "url": "https://github.com/girishsawant999/react-loading-button/issues"
   },
-  "homepage": "https://github.com/girishsawant999/library-name#readme",
+  "homepage": "https://github.com/girishsawant999/react-loading-button#readme",
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
     "@babel/preset-react": "^7.16.5",
     "autoprefixer": "^10.2.4",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^5.1.0",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.14",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.1",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
+    "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.5",
+    "lint-staged": "^12.1.3",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.2.6",
-    "postcss-loader": "^5.0.0",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.7.1"
   },
   "peerDependencies": {
     "react": "^16.13.0",
@@ -73,11 +74,14 @@
     }
   },
   "lint-staged": {
-    "*": [
+    "src/**/*.{js,jsx,ts,tsx,json,md,css,scss,sass,html}": [
       "prettier --write"
     ],
-    "*.jsx?": [
+    "src/**/*.{js,jsx,ts,tsx}": [
       "eslint  --fix-dry-run"
     ]
+  },
+  "dependencies": {
+    "prop-types": "^15.8.0"
   }
 }
