--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@girishsawant999/react-loading-button": "^0.2.2",
     "react-app-polyfill": "^1.0.0"
   },
   "alias": {
