ci: :construction_worker: Updated ci config to skip ci [skip ci]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   build:
     name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
+    if: "!contains(github.event.commits[0].message, '[skip ci]')"
 
     runs-on: ${{ matrix.os }}
     strategy:
