--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "./dist/"
   ],
   "scripts": {
-    "setup": "npm install && cd example && npm install",
-    "build:dev": "webpack",
-    "build": "NODE_ENV=production webpack",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
     "dev": "npm run build:dev && cd ./example && npm start",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx,json,md,css,scss,sass,html}' --write"
+    "build:dev": "webpack",
+    "build": "cross-env NODE_ENV=production webpack",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
+    "lint": "cross-env eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+    "prettier": "cross-env prettier 'src/**/*.{js,jsx,ts,tsx,json,md,css,scss,sass,html}' --write",
+    "setup": "npm install && cd example && npm install",
+    "setup:update": "ncu -u && cd example && ncu -u && cd .. && npm run setup"
   },
   "repository": {
     "type": "git",
@@ -35,39 +36,41 @@
   },
   "homepage": "https://github.com/girishsawant999/react-loading-button#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/preset-env": "^7.13.5",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.5",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "cssnano": "^5.0.14",
     "eslint": "^8.5.0",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
-    "lint-staged": "^12.1.3",
+    "lint-staged": "^12.1.4",
     "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.2.6",
+    "npm-check-updates": "^12.0.5",
+    "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.32.8",
+    "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1"
   },
   "peerDependencies": {
