--- a/example/package.json
+++ b/example/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --no-source-maps"
   },
   "dependencies": {
-    "@girishsawant999/react-loading-button": "^0.2.3",
+    "@girishsawant999/react-loading-button": "^0.2.4",
     "react-app-polyfill": "^3.0.0"
   },
   "alias": {
@@ -16,6 +16,7 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "parcel": "^2.0.1",
