--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,5 @@
-node_modules
-yarn.lock
-.env
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# misc
 .parcel-cache
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-__snapshots__
-
-# System Files
+node_modules
+dist
 .DS_Store
-Thumbs.db
-demo/dist
+coverage
