--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "semi": true,
-  "trailingComma": "all",
+  "tabWidth": 2,
+  "printWidth": 100,
   "singleQuote": true,
-  "printWidth": 80
+  "trailingComma": "none"
 }
