--- a/demo/package.json
+++ b/demo/package.json
@@ -4,17 +4,18 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html",
+    "build": "cross-env rm -rf dist && parcel build index.html --no-source-maps",
     "build:page": "parcel build index.html --dist-dir ../docs --no-source-maps --public-url ."
   },
   "dependencies": {
-    "@girishsawant999/react-loading-button": "^0.2.4",
     "react-app-polyfill": "^3.0.0"
   },
   "alias": {
     "react": "../node_modules/react",
     "react-dom": "../node_modules/react-dom/profiling",
-    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
+    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
+    "autoprefixer": "../node_modules/autoprefixer",
+    "dist": "../dist"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.1",
@@ -22,5 +23,10 @@
     "@types/react-dom": "^17.0.11",
     "parcel": "^2.0.1",
     "typescript": "^4.5.4"
-  }
+  },
+  "browserslist": [
+    "> 0.2%",
+    "last 2 versions",
+    "not ie < 10"
+  ]
 }
