ci: :construction_worker: Updated size job to ignore branches [skip ci]

--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -1,7 +1,8 @@
 name: Size
-on: [pull_request]
-branches-ignore:
-  - 'chore/*'
+on:
+  pull_request:
+    branches-ignore:
+      - 'chore/*'
 jobs:
   size:
     runs-on: ubuntu-latest
