fix: :bug: jsx runtime issue on installed library

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@girishsawant999/react-loading-button",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "A react component for loading button with animation",
   "type": "module",
   "source": "src/index.tsx",
@@ -22,8 +22,7 @@
     "lint": "cross-env eslint './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "cross-env eslint './**/*.{js,jsx,ts,tsx}' --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json,html,scss,sass}' --config ./.prettierrc --ignore-path ./.gitignore",
-    "setup": "npm install && husky install && cd demo && npm install",
-    "setup:update": "ncu -u && cd demo && ncu -u && cd .. && npm run setup"
+    "setup": "npm install --legacy-peer-deps && husky install && cd demo && npm install --legacy-peer-deps"
   },
   "repository": {
     "type": "git",
@@ -47,43 +46,43 @@
   },
   "homepage": "https://girishsawant999.github.io/react-loading-button",
   "devDependencies": {
-    "@parcel/packager-ts": "^2.0.1",
-    "@parcel/transformer-sass": "^2.0.1",
-    "@parcel/transformer-typescript-types": "^2.0.1",
-    "@size-limit/preset-app": "^7.0.5",
-    "@size-limit/preset-big-lib": "^7.0.5",
-    "@size-limit/preset-small-lib": "^7.0.5",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "autoprefixer": "^10.4.1",
+    "@parcel/packager-ts": "^2.6.2",
+    "@parcel/transformer-sass": "^2.6.2",
+    "@parcel/transformer-typescript-types": "^2.6.2",
+    "@size-limit/preset-app": "^7.0.8",
+    "@size-limit/preset-big-lib": "^7.0.8",
+    "@size-limit/preset-small-lib": "^7.0.8",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@types/jest": "^28.1.4",
+    "@types/react": "^16.0.36",
+    "@types/react-dom": "^16.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "husky": "^7.0.4",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "jest-environment-jsdom-global": "^3.0.0",
-    "jest-localstorage-mock": "^2.4.18",
-    "lint-staged": "^12.1.5",
-    "npm-check-updates": "^12.1.0",
-    "parcel": "^2.0.1",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "size-limit": "^7.0.5",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "jest": "^28.1.2",
+    "jest-environment-jsdom-global": "^3.1.2",
+    "jest-localstorage-mock": "^2.4.21",
+    "lint-staged": "^13.0.3",
+    "parcel": "^2.6.2",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "size-limit": "^7.0.8",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,md,json,html,scss,sass}": [
