--- a/demo/package.json
+++ b/demo/package.json
@@ -18,11 +18,12 @@
     "dist": "../dist"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "parcel": "^2.0.1",
-    "typescript": "^4.5.4"
+    "@parcel/transformer-sass": "^2.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "parcel": "^2.6.2",
+    "process": "^0.11.10",
+    "typescript": "^4.7.4"
   },
   "browserslist": [
     "> 0.2%",
