--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "jest-environment-jsdom-global": "^3.1.2",
     "jest-localstorage-mock": "^2.4.21",
     "lint-staged": "^13.0.3",
